# Owl

./: Cargo.toml  README.md
src/: app.rs  config.rs  explorer.rs  internal.rs  main.rs  ui.rs
src/config/: cnf.toml
src/explorer/: mod.rs  owl_explorer.rs
src/ui/: config.rs  content.rs  mod.rs  mode_bar.rs  options.rs  shell.rs  tree.rs  tree_item.rs
