[package]
name = "owl"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0.195", features = ["derive"] }
serde_derive = "1.0.195"
winsafe = { version = "0.0.19", features = ["kernel"] }
crossterm = "0.27"
ratatui = "0.25.0"
bplustree = "0.1.0"
chrono = "0.4.31"
humansize = "2.1.3"
toml = "0.8.8"
lazy_static = "1.4.0"